Configured devis and fixed some issues

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -56,7 +56,7 @@
 					{% if app.user %}
 						<li class="cd-side__btn">
 
-							<a href="{{ path('front_board', {id: app.user.id}) }}) }}" class="btn btn-primary">Mon tableau de bord
+							<a href="{{ url('front_devis_utilisateur_show') }}" class="btn btn-primary">Mon devis
 
 							</a>
 						</li>
