--- a/templates/front/includes/_nav.html.twig
+++ b/templates/front/includes/_nav.html.twig
@@ -26,18 +26,15 @@
 		</ul>
 	{% else %}
 		<ul class="cd-nav__list js-cd-nav__list">
-			<li class="cd-nav__item cd-nav__item--has-children cd-nav__item--account js-cd-item--has-children">
+			<li class="cd-nav__item">
 				<a href="mailto:wbelbeche.s@gmail.com">
-					<i class="bi bi-envelope-at paddin"></i>
 					Assistance
-
 				</a>
 			</li>
-		</li>
-	</ul>
-	<li class="cd-nav__item cd-nav__item--has-children cd-nav__item--account js-cd-item--has-children">
-		<a href="{{ url('app_logout') }}">
-			<i class="fas fa-user-clock">Déconnexion</i>
-		</a>
-	</li>
+			<li class="cd-nav__item cd-nav__item--account">
+				<a href="{{ url('app_logout') }}">
+					<i class="fas fa-user-clock">Déconnexion</i>
+				</a>
+			</li>
+		</ul>
 {% endif %}</header><!-- .cd-main-header -->
