--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,7 +7,7 @@
 			{% block title %}Welcome!
 			{% endblock %}
 		</title>
-		<meta name="description" content="Walid BELBECHE - Junior devloper"/>
+		<meta name="description" content="Walid BELBECHE - Web developer"/>
 		<meta name="keywords" content="site web, identité numérique, développement"/>
 		<meta content="WalidBELBECHE" name="author"/>
 		<link
