--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -57,7 +57,7 @@ body {
   width: 100%;
   height: 100%;
   min-height: 100%;
-  background-color: #4A6583;
+  background-color: #343a40;
   background-position: center center;
   background-size: calc(100% + 25px);
   background-repeat: repeat;
@@ -5459,6 +5459,11 @@ a.post-thumbnail:hover {
 }
 
 @media only screen and (max-width: 768px) {
+
+  /* Body Animated Background */
+  .lm-animated-bg {
+    display: none;
+  }
   .portfolio-grid figure {
     width: calc(50% - 16px);
   }
