--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -5,48 +5,238 @@
 
 {% block content %}
 
-		<div id="home_content" class="home-content third-style">
-			<div class="start-page-full-width">
-				<div class="row">
-					<div class="col-sm-12 col-md-6 col-lg-6">
-						<div class="inner-content p-50">
-							<div class="fill-block" style="background-image: url(./img/main_photo.svg);"></div>
-						</div>
-					</div>
-					<div class="col-sm-12 col-md-6 col-lg-6">
-						<div class="inner-content inner-text-block">
-							<div class="hp-text-block">
-								<div class="owl-carousel text-rotation">
-									<div class="item">
-										<div class="sp-subtitle">Walid BELBECHE</div>
-									</div>
-									<div class="item">
-										<div class="sp-subtitle">28 ans, Nièvre</div>
-									</div>
-									<div class="item">
-										<div class="sp-subtitle">6 ans dans le web développement</div>
-									</div>
-									<div class="item">
-										<div class="sp-subtitle">Concepteur développeur d'Applications</div>
-									</div>
-								</div>
+    <!-- Home Page Top Part -->
+    <div class="row">
+        <div class=" col-xs-12 col-sm-12">
+            <div class="home-content">
+                <div class="row flex-v-align">
 
-								<h2 class="hp-main-title">Un site web fonctionnel et adapté !</h2>
-								<p>
-									Tous nos clients ne sont pas des experts, c’est pourquoi nous apportons un soin tout particulier à plus de transparence dans le process de création de votre site internet et l’outil final d’administration de ce dernier qui vous sera livré.
-								</p>
+                    <div class="col-sm-12 col-md-5 col-lg-5">
+                        <div class="home-photo">
+                            <div class="hp-inner" style="background-image: url(./img/main_photo.svg);">
+                            </div>
+                        </div>
+                    </div>
 
-								<div class="hp-buttons">
-									<a href="wb_cv_cda_in_progress_2023.pdf" target="_blank" class="btn btn-primary">Télécharger CV</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- End Features Area -->
-		{#  <div class="container col-xxl-8 px-4 py-5">
+                    <div class="col-sm-12 col-md-7 col-lg-7">
+                        <div class="home-text hp-left">
+                            <div class="owl-carousel text-rotation">
+                                <div class="item">
+                                    <h4>Walid BELBECHE</h4>
+                                </div>
+                                <div class="item">
+                                    <h4>Créateur de site internet, sophistiqué et pas cher !</h4>
+                                </div>
+                            </div>
+
+                            <h1>Une application plus souple et adaptée : </h1>
+                            <p>Une plus grande implication du client et une meilleure réactivité des équipes face à ses demandes
+
+                                L'équipe, soit des individus et des interactions plutôt que des processus et des outils ;
+                                L’application, c'est-à-dire des fonctionnalités opérationnelles plutôt que de la documentation exhaustive ;
+                                La collaboration avec le client plutôt que la contractualisation des relations ;
+                                L’acceptation du changement plutôt que le suivi d'un plan.
+                            </p>
+
+                            <div class="home-buttons">
+                                <a href="wb_cv_cda_in_progress_2023.pdf" target="_blank" class="btn btn-primary">Télécharger CV</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="p-40"></div>
+
+    <!-- Services -->
+    <div class="row">
+        <div class="col-xs-12 col-sm-12">
+            <div class="p-50"></div>
+
+            <div class="block-title">
+                <h2>Ce que je fais</h2>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-xs-12 col-sm-6">
+            <div class="info-list-w-icon">
+                <div class="info-block-w-icon">
+                    <div class="ci-icon">
+                        <i class="linecons linecons-pen"></i>
+                    </div>
+
+                    <div class="ci-text">
+                        <h4>BRAINSTORM & ERGONOMIE</h4>
+                        <p>Étape essentielle du lancement de votre projet web, le brainstorm d’idées et le travail d’ergonomie web vont permettre de poser les bases de votre futur site,seo, mockup sont des mots qui feront bientôt partie de votre vocabulaire !</p>
+                    </div>
+                </div>
+
+                <div class="info-block-w-icon">
+                    <div class="ci-icon">
+                        <i class="linecons linecons-display"></i>
+                    </div>
+
+                    <div class="ci-text">
+                        <h4>CRÉATION & WEBDESIGN</h4>
+                        <p>Des idées, c’est bien. Les mettre en en pratique, c’est encore mieux ! Le webdesign de votre futur site internet est construit sous forme de maquettes (charte graphique) qui vous permettront de cadrer graphiquement et de vous projeter sur votre outil.</p>
+                    </div>
+                </div>
+
+                <div class="info-block-w-icon">
+                    <div class="ci-icon">
+                        <i class="linecons linecons-display"></i>
+                    </div>
+
+                    <div class="ci-text">
+                        <h4>SUIVI / STATISTIQUES</h4>
+                        <p>Un interlocuteur dédié, je vous assure que ça rassure. Des données chiffrées, ça rassure aussi ! On vous paramètre tout ça, et ça tombe dans votre boite mail, c’est beau la technologie vous ne trouvez pas ?</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-xs-12 col-sm-6">
+            <div class="info-list-w-icon">
+
+                <div class="info-block-w-icon">
+                    <div class="ci-icon">
+                        <i class="linecons linecons-shop"></i>
+                    </div>
+
+                    <div class="ci-text">
+                        <h4>INTÉGRATION & DÉVELOPPEMENT</h4>
+                        <p>Là on va commencer à entrer dans le vif du sujet : la transformation des visuels en code HTML, CSS et PHP ! C’est à ce moment que nos équipes techniques de développeurs web vont créer le code de votre nouveau site internet, c’est tout ce qu’il faut retenir !</p>
+                    </div>
+                </div>
+
+                <div class="info-block-w-icon">
+                    <div class="ci-icon">
+                        <i class="linecons linecons-megaphone"></i>
+                    </div>
+
+                    <div class="ci-text">
+                        <h4>CONTENUS & CONVERSION</h4>
+                        <p>Une Ferrari sans moteur, c’est beau mais ça n’avance pas ! Pour éviter le syndrome de la coquille vide, il faudra rédiger du contenu . Ne vous inquiétez pas, on a l’habitude et nos rédacteurs seront là si besoin. Pas de panique !</p>
+                    </div>
+                </div>
+
+                <div class="info-block-w-icon">
+                    <div class="ci-icon">
+                        <i class="linecons linecons-megaphone"></i>
+                    </div>
+
+                    <div class="ci-text">
+                        <h4>RÉFÉRENCEMENT NATUREL</h4>
+                        <p>Cerise sur le gâteau ? Non pas tant que ça en fait. Un beau site tout neuf, ce serait dommage qu’il ne soit pas référencé sur Google , vous ne trouvez pas ? Une stratégie SEO (aussi appelé référencement naturel), simple et efficace ne mange pas de pain !</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="p-40"></div>
+
+    <!-- Clients Slider -->
+    <div class="block-title">
+        <h2> Technologies et outils </h2>
+    </div>
+
+    <div id="clients_1" class="clients owl-carousel" data-mobile-items="1" data-tablet-items="3" data-items="6">
+        <div class="client-block">
+            <img src="./img/clients/spec-1.png" alt="PHP">
+        </div>
+
+        <div class="client-block">
+            <img src="./img/clients/spec-2.png" alt="HTML 5 / CSS 3">
+        </div>
+
+        <div class="client-block">
+            <img src="./img/clients/spec-3.png" alt="Git">
+        </div>
+
+        <div class="client-block">
+            <img src="./img/clients/spec-4.png" alt="Symfony">
+        </div>
+
+        <div class="client-block">
+            <img src="./img/clients/spec-5.png" alt="React">
+        </div>
+
+        <div class="client-block">
+            <img src="./img/clients/spec-6.png" alt="Javascript">
+        </div>
+
+        <div class="client-block">
+            <img src="./img/clients/spec-7.png" alt="Sass">
+        </div>
+    </div>
+    <!-- /Clients Slider -->
+
+    <div class="p-40"></div>
+
+    <!-- Pricing -->
+    <div class="row">
+        <div class=" col-xs-12 col-sm-12 ">
+            <div class="block-title">
+                <h2>Que souhaitez-vous faire ?</h2>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="row">
+        <div class=" col-xs-12 col-sm-12 ">
+            <div class="fw-pricing clearfix row">
+
+                <div class="fw-package-wrap col-md-6 ">
+                    <div class="fw-package">
+                        <div class="fw-heading-row">
+                            <span>PRESENTATION ENTREPRISE</span>
+                        </div>
+
+                        <div class="fw-pricing-row">
+                            <span>Sur devis</span>
+                        </div>
+
+                        <div class="fw-button-row">
+                            <a href="{{ url('front_devis', {id: app.user.id }) }}" target="_self" class="btn btn-secondary">Je fais une demande</a>
+                        </div>
+
+                        <div class="fw-default-row">Vous êtes une marque souhaitant donner un coup de neuf à son site web ou une entreprise souhaitant redynamiser sa présence sur le web ? Optez pour une création de site vitrine sur mesure, dynamique et novateur. A votre image.</div>
+                    </div>
+                </div>
+
+                <div class="fw-package-wrap col-md-6 highlight-col ">
+                    <div class="fw-package">
+                        <div class="fw-heading-row">
+                            <span>DÉVELOPPEMENT SUR MESURE</span>
+                        </div>
+
+                        <div class="fw-pricing-row">
+                            <span>Sur devis</span>
+                        </div>
+
+                        <div class="fw-button-row">
+                            <a href="{{ url('app_register') }}" target="_self" class="btn btn-primary">Je fais ma demande</a>
+                        </div>
+
+                        <div class="fw-default-row">Vous souhaitez aller un peu plus loin et vous avez en tête des fonctionnalités bien précises pour votre nouveau site internet ? Tout est possible techniquement, discutons ensemble de votre développement web sur mesure !</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /Pricing -->
+    </div>
+
+
+    <!-- /Services -->
+    <!-- Home Page Top Part -->
+    <!-- End Features Area -->
+    {#  <div class="container col-xxl-8 px-4 py-5">
 			<h1 class="display-5 fw-bold lh-1 mb-3">Création de site web</h1>
 			<p class="lead">Aujourd'hui la pluspart de nos utilisateurs sont connectés.</p>
 			<div class="d-grid gap-2 d-md-flex justify-content-md-start">
@@ -142,14 +332,14 @@
 				<!--end row-->
 			</div>
 			<!--end container-->
-		</section>#}
+		</section> #}
 
-		{#<div class="container col-xxl-8 px-4 py-5">
+    {# <div class="container col-xxl-8 px-4 py-5">
 			<h1 class="display-5 fw-bold lh-1 mb-3">Bienvenue</h1>
 			<hr>
 			<div class="d-grid gap-2 d-md-flex justify-content-md-start">
 				<a href="{{ url('front_devis_utilisateur_show') }}" class="btn btn-primary btn-lg px-4 me-md-2">Suivi de ma demande</a>
 				<a href="#" class="btn btn-outline-secondary btn-lg px-4">Annuler ma demande</a>
 			</div>
-		</div>#}
+		</div> #}
 {% endblock %}
