--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,35 +1,41 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register
+{% block title %}Inscription
 {% endblock %}
 
 {% block content %}
 	<div class="flex min-h-full items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
 		<div class="w-full max-w-md space-y-8">
 			<div>
-				<img class="mx-auto h-12 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="Walid BELBECHE - Wee">
+
 				<h2 class="mt-6 text-center text-3xl font-bold tracking-tight text-gray-900">Inscrivez-vous</h2>
 			</div>
 			{{ form_start(registrationForm, {attr: {'class' : 'mt-8 space-y-6'}}) }}
 				<div class="-space-y-px rounded-md shadow-sm">
 					<div>
-						<label for="email-address" class="sr-only">Identifiant</label>
-						{{ form_row(registrationForm.email) }}					</div>
+						<label for="nom" class="sr-only">Nom</label>
+						{{ form_row(registrationForm.nom) }}
+						{{ form_errors(registrationForm.nom) }}
+					</div>
+					<div>
+						<label for="prenom" class="sr-only">Prenom</label>
+						{{ form_row(registrationForm.prenom) }}
+						{{ form_errors(registrationForm.prenom) }}
+					</div>
+					<div>
+						<label for="email-address" class="sr-only">Identifiant de connexion</label>
+						{{ form_row(registrationForm.email) }}
+						{{ form_errors(registrationForm.email) }}
+					</div>
 					<div>
 						<label for="password" class="sr-only">Mot de passe</label>
-						{{ form_row(registrationForm.plainPassword) }}
+						{{ form_row(registrationForm.plainPassword.first) }}
+					</div>
+					<div>
+						<label for="password" class="sr-only">Répetez votre mot de passe</label>
+						{{ form_row(registrationForm.plainPassword.second) }}
 					</div>
 					{{ form_row(registrationForm.agreeTerms) }}
-					<button type="submit" class="btn">Register</button>
-				</div>
-			{{ form_end(registrationForm) }}
-				<div class="flex items-center justify-between">
-					<div class="text-sm">
-						<a href="#" class="font-medium text-indigo-600 hover:text-indigo-500">Vous avez oublié votre mot de passe ?</a>
-					</div>
-				</div>
-
-				<div>
 					<button type="submit" class="group relative flex w-full justify-center rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
 						  <span class="absolute inset-y-0 left-0 flex items-center pl-3">
 							<!-- Heroicon name: mini/lock-closed -->
@@ -39,6 +45,12 @@
 						  </span>
 						Je m'inscris
 					</button>
+				</div>
+			{{ form_end(registrationForm) }}
+				<div class="flex items-center justify-between">
+					<div class="text-sm">
+						<a href="#" class="font-medium text-indigo-600 hover:text-indigo-500">Vous avez oublié votre mot de passe ?</a>
+					</div>
 				</div>
 			</form>
 		</div>
