removed some files and updated quote + added swiftmailler

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -3976,10 +3976,10 @@ a.post-thumbnail:hover {
   font-size: 12px;
   line-height: 1.5;
 }
-
+/*
 .required {
-  color: #c0392b;
-}
+  color: #4caf50;
+}*/
 
 .comment-reply-title small {
 
