--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -35,7 +35,7 @@
                                 Doranco Paris en tant que Concepteur développeur d'Applications Bachelor 3ème année.
 
                                 Actuellement, je suis en recherche d'une opportunité dans le domaine du développement
-                                sur Paris où en île de France où bien en Bourgogne Franche comté, je réside actuellement
+                                sur Paris, en île de France, où bien en Bourgogne Franche comté, je réside actuellement
                                 dans la Nièvre (58).
                             </p>
 
