edit home index file

--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -94,13 +94,13 @@
 
                 <div class="info-block-w-icon">
                     <div class="ci-icon">
-                        <i class="linecons linecons-display"></i>
+                        <i class="linecons linecons-calendar"></i>
                     </div>
 
                     <div class="ci-text">
                         <h4>SUIVI / STATISTIQUES</h4>
                         <p>Un interlocuteur dédié, je vous assure que ça rassure. Des données chiffrées, ça rassure
-                            aussi ! On vous paramètre tout ça, et ça tombe dans votre boite mail, c’est beau la
+                            aussi ! Je vous paramètre tout ça, et ça tombe dans votre boite mail, c’est beau la
                             technologie vous ne trouvez pas ?</p>
                     </div>
                 </div>
@@ -118,8 +118,8 @@
                     <div class="ci-text">
                         <h4>INTÉGRATION & DÉVELOPPEMENT</h4>
                         <p>Là on va commencer à entrer dans le vif du sujet : la transformation des visuels en code
-                            HTML, CSS et PHP ! C’est à ce moment que nos équipes techniques de développeurs web vont
-                            créer le code de votre nouveau site internet, c’est tout ce qu’il faut retenir !</p>
+                            HTML, CSS et PHP ! C’est à ce moment que j'aborde le coté techniques et je vous
+                            créererai le code de votre nouveau site internet, c’est tout ce qu’il faut retenir !</p>
                     </div>
                 </div>
 
@@ -131,14 +131,14 @@
                     <div class="ci-text">
                         <h4>CONTENUS & CONVERSION</h4>
                         <p>Une Ferrari sans moteur, c’est beau mais ça n’avance pas ! Pour éviter le syndrome de la
-                            coquille vide, il faudra rédiger du contenu . Ne vous inquiétez pas, on a l’habitude et nos
+                            coquille vide, il faudra rédiger du contenu . Ne vous inquiétez pas, j'ai l’habitude et des
                             rédacteurs seront là si besoin. Pas de panique !</p>
                     </div>
                 </div>
 
                 <div class="info-block-w-icon">
                     <div class="ci-icon">
-                        <i class="linecons linecons-megaphone"></i>
+                        <i class="linecons linecons-data"></i>
                     </div>
 
                     <div class="ci-text">
