edit project page

--- a/templates/front/projets/index.html.twig
+++ b/templates/front/projets/index.html.twig
@@ -12,9 +12,9 @@
                 <div class="card" style="width: 18rem;">
                     <img src="{{ asset('img/portfolio/1.jpg') }}" class="card-img-top" alt="Réalisation 1">
                     <div class="card-body">
-                        <h5 class="card-title">Ma première réalisations</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Voir le projet</a>
+                        <h5 class="card-title">PAGE PROJET EN CONSTRUCTION</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi consequatur delectus dolorum.</p>
+                        <a href="https://github.com/belbeche/portfolio_wee" class="btn btn-primary">Voir le projet</a>
                     </div>
                 </div>
             </div>
