--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -57,7 +57,8 @@ body {
   width: 100%;
   height: 100%;
   min-height: 100%;
-  background-color: #343a40;
+  /*background-color: #343a40;*/
+  background-image: url('../../public/img/bg.jpg');
   background-position: center center;
   background-size: calc(100% + 25px);
   background-repeat: repeat;
