--- a/templates/back/project/new.html.twig
+++ b/templates/back/project/new.html.twig
@@ -14,8 +14,8 @@
     {{ form_row(projectForm.description) }}
     {{ form_errors(projectForm.description) }}
 
-    {{ form_row(projectForm.img) }}
-    {{ form_errors(projectForm.img) }}
+    {{ form_row(projectForm.images_project) }}
+    {{ form_errors(projectForm.images_project) }}
 
     <button type="submit">Créer projet</button>
 
