--- a/templates/front/projets/index.html.twig
+++ b/templates/front/projets/index.html.twig
@@ -8,16 +8,20 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-3">
-                <div class="card" style="width: 18rem;">
-                    <img src="{{ asset('img/portfolio/1.jpg') }}" class="card-img-top" alt="Réalisation 1">
-                    <div class="card-body">
-                        <h5 class="card-title">PAGE PROJET EN CONSTRUCTION</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi consequatur delectus dolorum.</p>
-                        <a href="https://github.com/belbeche/portfolio_wee" class="btn btn-primary">Voir le projet</a>
+            {% for project in projects  %}
+                <div class="col-md-3">
+                    <div class="card" style="width: 18rem;">
+                        {% for image in project.imagesProject %}
+                            <img src="{{ asset('/upload_images_project/'~image.name) }}" class="card-img-top" alt="{{ image.name }}">
+                        {% endfor %}
+                        <div class="card-body">
+                            <h5 class="card-title">{{ project.title }}</h5>
+                            <p class="card-text">{{ project.description }}.</p>
+                            <a href="{{ url('front_project_show', {id: project.id }) }}" class="btn btn-primary">Voir le projet</a>
+                        </div>
                     </div>
                 </div>
-            </div>
+            {% endfor %}
         </div>
     </div>
 
