added management picture for the demo app in the back

--- a/templates/back/includes/_project_form.html.twig
+++ b/templates/back/includes/_project_form.html.twig
@@ -6,8 +6,8 @@
     {{ form_row(projectEdit.description) }}
     {{ form_errors(projectEdit.description) }}
 
-    {{ form_row(projectEdit.images_project) }}
-    {{ form_errors(projectEdit.images_project) }}
+{#    {{ form_row(projectEdit.image) }}
+    {{ form_errors(projectEdit.image) }}#}
 
 <button type="submit" class="btn btn-primary">Enregistrer</button>
 
