--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -48,7 +48,7 @@
             {% include "front/includes/nav.html.twig" %}
         {% endblock %}
 
-            {% block content %}{% endblock %}
+        {% block content %}{% endblock %}
 
         <!-- Footer -->
         <footer class="site-footer clearfix">
@@ -63,7 +63,7 @@
                     </li>
 
                     <li>
-                        <a href="#" target="_blank">Mes réalisations</a>
+                        <a href="{{ url('front_project') }}" target="_blank">Mes réalisations</a>
                     </li>
                 </ul>
             </div>
@@ -77,20 +77,20 @@
     </div>
 </div>
 
-        <!-- Front script -->
-        {% block javascripts %}
-            <script src="{{ asset('js/jquery-3.5.1.min.js') }}"></script>
-            <script src="{{ asset('js/bootstrap.js') }}"></script>
-            {{ encore_entry_script_tags('app') }}
-            {{ encore_entry_script_tags('imagesloaded') }}
-            {#<script src='https://www.google.com/recaptcha/api.js'></script>#}
-            <script src="{{ asset('js/modernizr.custom.js') }}"></script>
-            <script src="{{ asset('js/jquery.shuffle.min.js') }}"></script>
-            <script src="{{ asset('js/masonry.pkgd.min.js') }}"></script>
-            {{ encore_entry_script_tags('owl.carousel') }}
-            <script src="{{ asset('js/jquery.magnific-popup.min.js') }}"></script>
-            {{ encore_entry_script_tags('validator') }}
-            {{ encore_entry_script_tags('main') }}
-        {% endblock %}
+<!-- Front script -->
+{% block javascripts %}
+    <script src="{{ asset('js/jquery-3.5.1.min.js') }}"></script>
+    <script src="{{ asset('js/bootstrap.js') }}"></script>
+    {{ encore_entry_script_tags('app') }}
+    {{ encore_entry_script_tags('imagesloaded') }}
+    {# <script src='https://www.google.com/recaptcha/api.js'></script> #}
+     <script src="{{ asset('js/modernizr.custom.js') }}"></script>
+    {# <script src="{{ asset('js/jquery.shuffle.min.js') }}"></script> #}
+    <script src="{{ asset('js/masonry.pkgd.min.js') }}"></script>
+    {{ encore_entry_script_tags('owl.carousel') }}
+    <script src="{{ asset('js/jquery.magnific-popup.min.js') }}"></script>
+    {{ encore_entry_script_tags('validator') }}
+    {{ encore_entry_script_tags('main') }}
+{% endblock %}
 </body>
 </html>
