--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -13,7 +13,7 @@
 
                     <div class="col-sm-12 col-md-5 col-lg-5">
                         <div class="home-photo">
-                            <div class="hp-inner" style="background-image: url(./img/profil.png);">
+                            <div class="hp-inner" style="background-image: url(./img/profil.jpg);">
                             </div>
                         </div>
                     </div>
