--- a/templates/front/devis/show.html.twig
+++ b/templates/front/devis/show.html.twig
@@ -18,7 +18,7 @@
             <h2>Type de demande :
                 {{ singleDevis.typeDeSiteWeb }}</h2>
             <h3>Par :
-                {{ singleDevis.user.prenom }} {{ singleDevis.user.nom }}</h3>
+                {{ singleDevis.email }}</h3>
 
             <div class="metadata">
                 Crée le
