--- a/templates/front/includes/nav.html.twig
+++ b/templates/front/includes/nav.html.twig
@@ -27,7 +27,7 @@
                 </li>
                 {% if is_granted('ROLE_USER') %}
                     <li class="menu-item">
-                        <a href="{{ url('front_devis_utilisateur_show') }}" class="btn btn-outline-info">Mes devis</a>
+                        <a href="{{ url('front_devis_new') }}" class="btn btn-outline-info">Créer devis</a>
                     </li>
                     <li class="menu-item">
                         <a href="{{ url('app_logout') }}" class="btn btn-outline-danger">Déconnexion</a>
