--- a/templates/front/devis/email.html.twig
+++ b/templates/front/devis/email.html.twig
@@ -4,17 +4,17 @@
 
     Bonjour {{ email_address }},
 
+    Vous souhaitez réaliser un : {{ subject }} <br>
+
+    Votre demande est : {{ message }} <br>
+
     <br>
 
     Numéro d'inscription : {{ registrationNumber }}
 
     <br>
 
-    Votre demande concerne : {{ subject }}
-
-    <br>
-
-    Je reviens vers vous dans 48h/72h maximum, vérifiez votre adresse email, passé ce délais , veuillez me contacter <a
+    Je reviens vers vous dans 48h/72h maximum, vérifiez votre adresse email, passé ce délai, veuillez me contacter.<a
         href="mailto:wbelbeche.s@gmail.com">Clickez ici</a>
 
 
