quote email edit last

--- a/templates/front/devis/email.html.twig
+++ b/templates/front/devis/email.html.twig
@@ -1,8 +1,8 @@
 {% block body_text %}
 
-    Bonjour {{ email_address }},
+    Bonjour {{ email_address }}, <br>
 
-    Vous souhaitez réaliser un : {{ subject }} <br>
+    Vous souhaitez réaliser : {{ subject }} <br>
 
     Votre demande est : {{ message }} <br>
 
