--- a/templates/front/devis/new.html.twig
+++ b/templates/front/devis/new.html.twig
@@ -26,12 +26,12 @@
 				{{ form_row(formDevis.type_de_site_web)}}
 				{{ form_errors(formDevis.type_de_site_web)}}
 				<label for="">Quelles sont vos attentes concernant le design ?</label>
-				 {{ form_row(formDevis.attentes_design_web)}}
+				{{ form_row(formDevis.attentes_design_web)}}
 				{{ form_errors(formDevis.attentes_design_web)}}
 				<label for="">Parlez moi un peu plus de votre projet !</label>
 				{{ form_row(formDevis.description_projet)}}
 				{{ form_errors(formDevis.description_projet)}}
-				<button type="submit" class="btn btn-outline-success my-5">Suivant</button>
+				<button type="submit" class="btn btn-outline-success my-5">Valider ma demande !</button>
 				{{ form_end(formDevis) }}
 			</div>
 		</div>
