--- a/templates/front/projets/show.html.twig
+++ b/templates/front/projets/show.html.twig
@@ -4,37 +4,54 @@
 
 {% block content %}
 
-    <div class="container">
-        <nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item">
-                    <a href="{{ url('front_home') }}">Accueil</a>
-                </li>
-                <li class="breadcrumb-item">
-                    <a href="{{ url('front_project') }}">Mes réalisations</a>
-                </li>
-                <li class="breadcrumb-item active" aria-current="page">{{ project.title }}
-                </li>
-            </ol>
-        </nav>
-    </div>
+	<div class="container">
+		<nav aria-label="breadcrumb">
+			<ol class="breadcrumb">
+				<li class="breadcrumb-item">
+					<a href="{{ url('front_home') }}">Accueil</a>
+				</li>
+				<li class="breadcrumb-item">
+					<a href="{{ url('front_project') }}">Mes réalisations</a>
+				</li>
+				<li class="breadcrumb-item active" aria-current="page">{{ project.title }}
+				</li>
+			</ol>
+		</nav>
+	</div>
 
-    <article class="container mt-4 text-center">
-        <h1>{{ project.title }}</h1>
-        <br>
-        <p class="text-secondary">
-            | le
-            {{ project.createdAt|format_datetime('full', 'short', locale='fr') }}
-            | modifié le
-            {{ project.updatedAt|format_datetime('full', 'short', locale='fr') }}</p>
+	<section>
+		<article
+			class="container mt-4 text-center">
+			{# <p>{{ project. }}</p> #}
+			<div class="row">
 
-            <img src="{{ asset('/image_project/'~project.image.name) }}" alt="{{ project.image.name }}" class="img-fluid"/>
-        <div class="mt-4">
-            <h2>Description : </h2>
-            {{ project.description|raw }}
-        </div>
-    </article>
+				<div class="col-md-6">
+					<h3>{{ project.title }}</h3>
+					<h6>Créer le</h6>
+					<p>{{ project.createdAt|format_datetime('full', 'short', locale='fr') }}
+						| modifié le
+						{{ project.updatedAt|format_datetime('full', 'short', locale='fr') }}</p>
+					<img src="{{ asset('/image_project/'~project.image.name) }}" alt="{{ project.image.name }}" class="img-fluid"/>
 
+				</div>
+				<div class="col-md-6">
+					<p class="text-secondary">
+						<h3>Categories :
+						</h3>
+						{% for categorie in project.categories %}
+							<div>
+								{{ categorie.name }}
+							</div>
+						{% endfor %}
+						<div>
+							<h2>Description
+							</h2>
+							{{ project.description|raw }}</div>
+					</p>
+				</div>
+			</div>
 
+		</article>
+	</section>
 
 {% endblock %}
