--- a/templates/front/includes/nav.html.twig
+++ b/templates/front/includes/nav.html.twig
@@ -1,50 +1,53 @@
 <!-- Header -->
 <header id="site_header" class="header">
-    <div class="header-content clearfix">
+	<div
+		class="header-content clearfix">
 
-        <!-- Text Logo -->
-        <div class="text-logo">
-            <a href="{{ url('front_home') }}">
-                <div class="logo-symbol">WB</div>
-                <div class="logo-text">Walid <span>BELBECHE</span></div>
-            </a>
-        </div>
-        <!-- /Text Logo -->
+		<!-- Text Logo -->
+		<div class="text-logo">
+			<a href="{{ url('front_home') }}">
+				<div class="logo-symbol">WB</div>
+				<div class="logo-text">Walid
+					<span>BELBECHE</span>
+				</div>
+			</a>
+		</div>
+		<!-- /Text Logo -->
 
-        <!-- Navigation -->
-        <div class="site-nav mobile-menu-hide">
-            <ul class="leven-classic-menu site-main-menu">
-                <li class="menu-item">
-                    <a href="{{ url('front_home') }}">Accueil</a>
-                </li>
+		<!-- Navigation -->
+		<div class="site-nav mobile-menu-hide">
+			<ul class="leven-classic-menu site-main-menu">
+				<li class="menu-item">
+					<a href="{{ url('front_home') }}">Accueil</a>
+				</li>
 
-                <li class="menu-item">
-                    <a href="{{ url('front_project') }}">Mes réalisations</a>
-                </li>
+				<li class="menu-item">
+					<a href="{{ url('front_project') }}">Ce que je propose</a>
+				</li>
 
-                <li class="menu-item">
-                    <a href="mailto:wbelbeche.s@gmail.com">Contact</a>
-                </li>
-                {% if is_granted('ROLE_USER') %}
-                    <li class="menu-item">
-                        <a href="{{ url('front_devis_new') }}" class="btn btn-outline-info">Créer devis</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="{{ url('app_logout') }}" class="btn btn-outline-danger">Déconnexion</a>
-                    </li>
-                {% endif %}
+				<li class="menu-item">
+					<a href="mailto:wbelbeche.s@gmail.com">Contact</a>
+				</li>
+				{% if is_granted('ROLE_USER') %}
+					<li class="menu-item">
+						<a href="{{ url('front_devis_new') }}" class="btn btn-outline-info">Créer devis</a>
+					</li>
+					<li class="menu-item">
+						<a href="{{ url('app_logout') }}" class="btn btn-outline-danger">Déconnexion</a>
+					</li>
+				{% endif %}
 
-                {% if is_granted('ROLE_ADMIN') %}
-                    <li class="menu-item">
-                        <a href="{{ url('back_index') }}" class="btn btn-outline-danger">Admin panel</a>
-                    </li>
-                {% endif %}
-            </ul>
-        </div>
+				{% if is_granted('ROLE_ADMIN') %}
+					<li class="menu-item">
+						<a href="{{ url('back_index') }}" class="btn btn-outline-danger">Admin panel</a>
+					</li>
+				{% endif %}
+			</ul>
+		</div>
 
-        <a class="menu-toggle mobile-visible">
-            <i class="fa fa-bars"></i>
-        </a>
-    </div>
+		<a class="menu-toggle mobile-visible">
+			<i class="fa fa-bars"></i>
+		</a>
+	</div>
 </header>
 <!-- /Header -->
